@@ -2,8 +2,8 @@ package com.chicu.aibot.strategy.scalping;
 
 import com.chicu.aibot.strategy.StrategyType;
 import com.chicu.aibot.strategy.TradingStrategy;
-import com.chicu.aibot.strategy.model.Order;
 import com.chicu.aibot.strategy.model.Candle;
+import com.chicu.aibot.strategy.model.Order;
 import com.chicu.aibot.strategy.scalping.model.ScalpingStrategySettings;
 import com.chicu.aibot.strategy.scalping.service.ScalpingStrategySettingsService;
 import com.chicu.aibot.strategy.service.CandleService;
@@ -37,7 +37,9 @@ public class ScalpingStrategy implements TradingStrategy {
     public void stop(Long chatId) {
         List<Order> orders = activeOrders.remove(chatId);
         if (orders != null) {
-            orders.forEach(orderService::cancel);
+            for (Order order : orders) {
+                orderService.cancel(chatId, order);
+            }
         }
     }
 
@@ -45,20 +47,29 @@ public class ScalpingStrategy implements TradingStrategy {
     public void onPriceUpdate(Long chatId, double currentPrice) {
         ScalpingStrategySettings cfg = settingsService.getOrCreate(chatId);
 
-        List<Candle> candles = candleService.getLastCandles(cfg.getSymbol(), cfg.getTimeframe(), cfg.getCachedCandlesLimit());
+        List<Candle> candles = candleService.getLastCandles(
+            cfg.getSymbol(),
+            cfg.getTimeframe(),
+            cfg.getCachedCandlesLimit()
+        );
+        if (candles.size() < cfg.getWindowSize()) {
+            return;
+        }
 
-        if (candles.size() < cfg.getWindowSize()) return;
-
-        double open = candles.get(candles.size() - cfg.getWindowSize()).getOpen();
-        double close = candles.get(candles.size() - 1).getClose();
-        double change = close - open;
-        double changePct = (change / open) * 100.0;
+        double open  = candles.get(candles.size() - cfg.getWindowSize()).getOpen();
+        double close = candles.getLast().getClose();
+        double changePct = ((close - open) / open) * 100.0;
 
         List<Order> orders = activeOrders.computeIfAbsent(chatId, k -> new ArrayList<>());
 
         if (Math.abs(changePct) >= cfg.getPriceChangeThreshold()) {
             Order.Side side = changePct > 0 ? Order.Side.BUY : Order.Side.SELL;
-            Order order = orderService.placeMarket(cfg.getSymbol(), side, cfg.getOrderVolume());
+            Order order = orderService.placeMarket(
+                chatId,
+                cfg.getSymbol(),
+                side,
+                cfg.getOrderVolume()
+            );
             orders.add(order);
         }
 
@@ -68,8 +79,11 @@ public class ScalpingStrategy implements TradingStrategy {
     @Override
     public double getCurrentPrice(Long chatId) {
         ScalpingStrategySettings cfg = settingsService.getOrCreate(chatId);
-        List<Candle> candles = candleService.getLastCandles(cfg.getSymbol(), cfg.getTimeframe(), 1);
-        if (candles.isEmpty()) return 0.0;
-        return candles.get(0).getClose();
+        List<Candle> candles = candleService.getLastCandles(
+            cfg.getSymbol(),
+            cfg.getTimeframe(),
+            1
+        );
+        return candles.isEmpty() ? 0.0 : candles.getFirst().getClose();
     }
 }
